# hermit

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: linter.yml
.hermit/: config.toml
.hermit/chats/: oct-02-at-02-23pm.json
hermit/: cli.py  main.py
hermit/cli/: main.py  utils.py
hermit/daemon/: main.py  models.py  utils.py
src/hermit/: cli.py  cli_utils.py  models.py  server.py  server_utils.py
