[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hermit-cli"
version = "0.1.0"
authors = [
  { name="Alan", email="alanmackiewicz03@gmail.com" },
]
description = "A local-first AI developer assistant."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]",
    "requests",
    "rich",
    "questionary",
    "toml",
    "fastapi",
    "uvicorn",
    "openai",
    "httpx",
    "ollama",
    "chromadb",
    "localgrid"
]

[project.scripts]
hermit = "hermit.cli:app"
hermit-daemon = "hermit.server:run"

[project.optional-dependencies]
dev = [
    "ruff"
]

[tool.setuptools.packages.find]
where = ["src"]

